# DepthSenseRecorder

./: CMakeLists.txt  main.cpp
cmake/modules/: FindDepthSense.cmake
include/: ColorCamera.hpp  DS325.hpp  DepthCamera.hpp  Error.hpp  IOException.hpp
src/: ColorCamera.cpp  DS325.cpp  DS325Capture.cpp  DS325PlanarSegmentation.cpp  DS325Record.cpp  DepthCamera.cpp
